src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>TriTech Change Order</fullName>
        <description>TriTech Change Order Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active Opportunity</fullName>
        </values>
        <values>
            <fullName>Booked</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Lost - No Bid</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Other</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>TriTech Competitive</fullName>
        <description>TriTech Competitive Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active Opportunity</fullName>
        </values>
        <values>
            <fullName>Booked</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Lost - No Bid</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Other</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Opportunity Identified</fullName>
        </values>
        <values>
            <fullName>Procurement</fullName>
        </values>
        <values>
            <fullName>Selected</fullName>
        </values>
        <values>
            <fullName>Shortlisted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>TriTech Non-Competitive</fullName>
        <description>TriTech Non-Competitive Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active Opportunity</fullName>
        </values>
        <values>
            <fullName>Booked</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Lost - No Bid</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Other</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Opportunity Identified</fullName>
        </values>
        <values>
            <fullName>Selected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Zuercher Change Order</fullName>
        <description>Zuercher Change Order Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active Opportunity</fullName>
        </values>
        <values>
            <fullName>Booked</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Lost - No Bid</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Other</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Zuercher Competitve</fullName>
        <description>Zuercher Competitve Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active Opportunity</fullName>
        </values>
        <values>
            <fullName>Booked</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Lost - No Bid</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Other</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Opportunity Identified</fullName>
        </values>
        <values>
            <fullName>Procurement</fullName>
        </values>
        <values>
            <fullName>Selected</fullName>
        </values>
        <values>
            <fullName>Shortlisted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Zuercher Non-Competitive</fullName>
        <description>Zuercher Non-Competitive Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active Opportunity</fullName>
        </values>
        <values>
            <fullName>Booked</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Lost - No Bid</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Other</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Opportunity Identified</fullName>
        </values>
        <values>
            <fullName>Selected</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AE_is_it_a_ZT_Spec__c</fullName>
        <description>Part of the Zuercher RFP Go/No Go criteria section (Zuercher competitive Opps only)</description>
        <label>(AE) is it a ZT Spec?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accident_Report_Interface__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accident Report Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accident_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accident Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Opportunity_Value__c</fullName>
        <description>The Actual Opportunity Value is the actual value of this opportunity based on the quote.

NOTE:  For Inform or GSA opportunities, Actual Opportunity Value for new business will not include maintenance; existing business will include it.</description>
        <formula>if(
	and(ispickval(Price_Book__c,&apos;Zuercher&apos;),ispickval(Product_Family_WMP__c,&apos;TT911&apos;), len(Quote_Number__c) &gt; 1),
		Quote_Subtotal__c,
			if(!ispickval(Price_Book__c,&apos;Respond&apos;),
				if(Quote_Subtotal__c &lt;&gt; 0, Quote_Subtotal__c - Tax__c,Amount),
					if(alternate_opp_value__c &lt;&gt; 0,alternate_opp_value__c,
						if(Quote_Subtotal__c = 0,Quote_Subtotal__c,Quote_Subtotal__c)
					)
			)
		
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Actual Opportunity Value is the actual value of this opportunity based on the quote.

NOTE:  For Inform or GSA opportunities, Actual Opportunity Value for new business will not include maintenance; existing business will include it.</inlineHelpText>
        <label>Actual Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agencies_being_served__c</fullName>
        <label>Agencies being served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_Types_Being_Served__c</fullName>
        <label>Agency Types Being Served</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Manager__c</fullName>
        <formula>Owner.Manager.FirstName &amp; &quot; &quot; &amp; Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Assigned approval manager for opportunity owner</inlineHelpText>
        <label>Approval Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Budget__c</fullName>
        <label>Approved Budget</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associate_Account_Manager_Email__c</fullName>
        <label>Associate Account Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Associate_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associate Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Associated Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BANT_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BANT Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BANT_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BANT Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BANT_Completed_Date__c</fullName>
        <description>Workflow populated to define when &quot;BANT Complete&quot; is checked.</description>
        <label>BANT Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BANT_Paid__c</fullName>
        <description>MBO tracking for target BANT opportunities that are paid. Visibility limited to Sys Admins, Jenni Hastie and Bob K.</description>
        <label>BANT Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Bond_Amount__c</fullName>
        <label>Bid Bond Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Bond_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bid Bond Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Bond_Percentage__c</fullName>
        <label>Bid Bond Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bid_Bond_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bid Bond Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Bond_Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bid Bond Returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_No_Bid_Decision_Date__c</fullName>
        <inlineHelpText>Date that the Bid/No Bid decision was approved.</inlineHelpText>
        <label>Bid/No Bid Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bidder_s_Conference_Date__c</fullName>
        <label>Bidder&apos;s Conference Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bidders_Conference_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bidder&apos;s Conference Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <formula>Account.Mailing_Billing_City_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <formula>TEXT (Account.Mailing_Billing_Country_WMP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <formula>TEXT(Account.Mailing_Billing_State_WMP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street__c</fullName>
        <formula>Account.Mailing_Billing_Street_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Zip__c</fullName>
        <formula>Account.Mailing_Billing_Zip_Postal_Code_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booked_Actual_Value_Not_Equal__c</fullName>
        <description>Checks Box if Booked and Actual Value do not match</description>
        <formula>(Actual_Opportunity_Value__c   &gt;  Booked_Value__c + 1)  || (Actual_Opportunity_Value__c   &lt;  Booked_Value__c - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booked &amp; Actual Value Not Equal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booked_Value__c</fullName>
        <label>Booked Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Total__c</fullName>
        <label>Budget Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Issues_WMP__c</fullName>
        <label>Business Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CAD_Dispatcher_Call_Taker_Seats__c</fullName>
        <formula>Account.CAD_Dispatcher_Call_Taker_Seats__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAD Dispatcher/Call Taker Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Quote_Number__c</fullName>
        <label>CPQ Quote Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Change_Order_Additions_Total__c</fullName>
        <description>Syncs over from Endeavor for Change Order Opportunities only</description>
        <inlineHelpText>Syncs over from Endeavor for Change Order Opportunities only</inlineHelpText>
        <label>Change Order Additions Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Order_Deletions_Total__c</fullName>
        <description>Syncs over from Endeavor for Change Order Opps only</description>
        <inlineHelpText>Syncs over from Endeavor for Change Order Opps only</inlineHelpText>
        <label>Change Order Deletions Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Types__c</fullName>
        <description>Combined list of all applicable charge types for products associated to this Opportunity</description>
        <label>Charge Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Citation_Interface__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Citation Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Citations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Citations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Email__c</fullName>
        <description>Primary Quote Contact&apos;s email address</description>
        <formula>Primary_Quote_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Primary Quote Contact&apos;s email address</inlineHelpText>
        <label>Client Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Phone__c</fullName>
        <description>Primary Quote Contact&apos;s phone number</description>
        <formula>Primary_Quote_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Primary Quote Contact&apos;s phone number</inlineHelpText>
        <label>Client Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date_Certainty__c</fullName>
        <label>Close Date Certainty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Pull In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date_Confidence_Current_Close_Date__c</fullName>
        <label>Close Date Confidence-Current Close Date</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Close_Date_Confidence_Following_Month__c</fullName>
        <label>Close Date Confidence-Following Month</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Close_Date_Confidence_Next_Month__c</fullName>
        <label>Close Date Confidence-Next Month</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Close_Date_Confidence_Total__c</fullName>
        <formula>Close_Date_Confidence_Current_Close_Date__c +  Close_Date_Confidence_Next_Month__c + Close_Date_Confidence_Following_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Confidence-Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Close_Time_Selection_to_Close__c</fullName>
        <formula>CloseDate  -  Selection_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Time - Selection to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comm_Value_Sync__c</fullName>
        <label>Commissionable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments_Reason_TriTech_Lost__c</fullName>
        <label>Comments - Reason TriTech Lost</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Reason_TriTech_Won__c</fullName>
        <label>Comments - Reason TriTech Won</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commisionable__c</fullName>
        <description>Accounting only field; applicable to Change Order record types only; used to determine whether a Change Order is commissionable.</description>
        <label>Commisionable?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commissionable_GM__c</fullName>
        <inlineHelpText>Internal commissionable GM%</inlineHelpText>
        <label>Commissionable GM%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Common_Partners__c</fullName>
        <inlineHelpText>Businesses/People with pre-existing relationships with the current prospect</inlineHelpText>
        <label>Common Partners</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compelling_Event__c</fullName>
        <label>Compelling Event</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Selection_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive Selection Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitors_WMP__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911 EMS Software, LLC</fullName>
                </value>
                <value>
                    <fullName>911-Inc.</fullName>
                </value>
                <value>
                    <fullName>ACS-Firehouse</fullName>
                </value>
                <value>
                    <fullName>ADSI</fullName>
                </value>
                <value>
                    <fullName>AeroMed Software</fullName>
                </value>
                <value>
                    <fullName>Agisent</fullName>
                </value>
                <value>
                    <fullName>Alert Public Safety Solutions (APSS)</fullName>
                </value>
                <value>
                    <fullName>Allegheny R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Alpine Software</fullName>
                </value>
                <value>
                    <fullName>AmbuPro</fullName>
                </value>
                <value>
                    <fullName>AMCAD</fullName>
                </value>
                <value>
                    <fullName>AngelTrack</fullName>
                </value>
                <value>
                    <fullName>Application Data Systems Inc. (ADSi)</fullName>
                </value>
                <value>
                    <fullName>Archonix</fullName>
                </value>
                <value>
                    <fullName>ARMMS</fullName>
                </value>
                <value>
                    <fullName>Astra</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Beyond Lucid Technologies</fullName>
                </value>
                <value>
                    <fullName>Bighorn Systems</fullName>
                </value>
                <value>
                    <fullName>BIO-Key</fullName>
                </value>
                <value>
                    <fullName>BIS</fullName>
                </value>
                <value>
                    <fullName>Blue Diamond</fullName>
                </value>
                <value>
                    <fullName>Bradshaw Consulting</fullName>
                </value>
                <value>
                    <fullName>Caliber/Global</fullName>
                </value>
                <value>
                    <fullName>Caliber/InterAct</fullName>
                </value>
                <value>
                    <fullName>Caliber/Sleuth</fullName>
                </value>
                <value>
                    <fullName>Caliber/TAC.10</fullName>
                </value>
                <value>
                    <fullName>CallWorx</fullName>
                </value>
                <value>
                    <fullName>Capers</fullName>
                </value>
                <value>
                    <fullName>Cardinal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conference_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person who represented TTS at conference</inlineHelpText>
        <label>Conference Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Click the icon to associate a contact from this account to the opportunity</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Capture_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Capture Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must choose an active TriTech user</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be sync completed by a corresponding &quot;Contract Required&quot; checkbox in Endeavor to be checked by quote creator based on criteria to be supplied to them.</description>
        <label>Contract Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Sent_to_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Sent to Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Contacts__c</fullName>
        <description>Populated by Apex trigger: 	CountofContacts
https://na6.salesforce.com/01q80000000H8OU
Re-activated 2/5/18</description>
        <label>Count of Contacts</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Annual_Support__c</fullName>
        <description>Syncs over from Endeavor</description>
        <label>Current Annual Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <formula>Text(StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <formula>Account.EMS_Customer_Number_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daily_Fee__c</fullName>
        <description>Syncs over from Endeavor</description>
        <label>Daily Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Grant_Funds_Expire__c</fullName>
        <label>Date Grant Funds Expire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline_for_Vendor_Questions__c</fullName>
        <label>Deadline for Vendor Questions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <inlineHelpText>Add-On/Extension/Upgrade: Any add-on/extension/upgrade to existing system already installed and under maintenance
New Major System: Any new major system (ie Inform CAD, Inform RMS, etc.) whether account is new or existing
911 System: Any standalone deal</inlineHelpText>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911 System</fullName>
                </value>
                <value>
                    <fullName>Add-On/Extension/Upgrade</fullName>
                    <default>true</default>
                    <label>Add-On/Extension/Upgrade</label>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>New Major System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>Quote discount amount</description>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Quote discount %</description>
        <label>Discount  %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discovery_results_attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery results attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_we_know_how_much_is_budgeted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do we know how much is budgeted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dummyrecordtouchfield__c</fullName>
        <label>Dummyrecordtouchfield</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Edited_Last_30_days__c</fullName>
        <formula>if((TODAY() - 30) &lt;   DATEVALUE(LastModifiedDate), &quot;TRUE&quot;, &quot;FALSE&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edited Last 30 days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Syncs over from Endeavor</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_per_Sworn_Officer__c</fullName>
        <formula>Actual_Opportunity_Value__c  /  Account.CAD_Parent_Total_Sworn_Officers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated per officer cost = Actual Opportunity Value / CAD Parent Total Sworn Officers</inlineHelpText>
        <label>Estimated Cost per Sworn Officer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Executive_Summary_Modifed_Date__c</fullName>
        <label>Executive Summary Modified Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_Requested__c</fullName>
        <label>Extension</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Granted</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>